dashboard pour responsable